--- a/index.html
+++ b/index.html
@@ -158,12 +158,25 @@ As a voxel-wise labeling task, semantic scene completion (SSC) tries to simultan
 </table>
 <hr>
 
-<table align=center width=1000px>
+<table align=center width=900px>
     <tr>
         <td width=400px>
             <left>
             <center><h1>Acknowledgments</h1></center>
             This work is supported by the National Natural Science Foundation of China under Grants 61773210 and 61603184 and the EPSRC Programme Grant Seebibyte EP/M013774/1.
+            </left>
+        </td>
+    </tr>
+</table>
+
+<hr>
+<table align=center width=900px>
+    <tr>
+        <td width=400px>
+            <left>
+            <center><h1>Related</h1></center>
+            DDRNet (CVPR2019): <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Li_RGBD_Based_Dimensional_Decomposition_Residual_Network_for_3D_Semantic_Scene_CVPR_2019_paper.pdf"> RGBD Based Dimensional Decomposition Residual Network for 3D Semantic Scene Completion </a> <br>
+            PALNet (RAL2019): <a href="https://ieeexplore.ieee.org/document/8902045"> Depth Based Semantic Scene Completion with Position Importance Aware Loss </a>
             </left>
         </td>
     </tr>
